--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.text_field :bio %>
   </div>
   <div class="field">
-    <%= f.label :password_hash %><br>
-    <%= f.text_field :password_hash %>
+    <%= f.label :password %><br>
+    <%= f.password_field :password %>
   </div>
   <div class="actions">
     <%= f.submit %>
