--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <a class="nav-btn" href="/login">Log in</a>
       <a class="nav-btn" href="/users/new">Sign up</a>
     <% else %>
-      <%= link_to "@#{current_user.name}", current_user %>
+      <%= link_to "@#{current_user.username}", current_user %>
       <%= link_to 'Log out', logout_path, method: :delete %>
     <% end %>
     <span class="nav-sessions">
