--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,10 +15,8 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.caption %></td>
-        <td><%= post.user %></td>
+        <td><%= post.user.username %></td>
         <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +24,6 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<% if logged_in? %>
+  <%= link_to 'New Post', new_post_path %>
+<% end %>
