--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,8 +7,11 @@
 
 <p>
   <strong>User:</strong>
-  <%= @post.user %>
+  <%= @post.user.username %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
+<% if logged_in? %>
+  <%= link_to 'Edit', edit_post_path(@post) %> |
+  <%= link_to 'Delete post', "/posts/#{@post.id}", method: :delete, data: { confirm: 'Are you sure?' } %> |
+<% end %>
 <%= link_to 'Back', posts_path %>
