--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,6 @@
       <th>Username</th>
       <th>Name</th>
       <th>Bio</th>
-      <th>Password hash</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,10 +18,11 @@
         <td><%= user.username %></td>
         <td><%= user.name %></td>
         <td><%= user.bio %></td>
-        <td><%= user.password_hash %></td>
         <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% if logged_in? && current_user = user %>
+          <td><%= link_to 'Edit', edit_user_path(user) %></td>
+          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
       </tr>
     <% end %>
   </tbody>
