--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= user.name %></td>
         <td><%= user.bio %></td>
         <td><%= link_to 'Show', user %></td>
-        <% if logged_in? && current_user = user %>
+        <% if logged_in? && current_user == user %>
           <td><%= link_to 'Edit', edit_user_path(user) %></td>
           <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           <% end %>
