--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -13,6 +13,10 @@
     <% end %>
     
     <div class="field">
+      <%= f.label :image %>
+      <%= f.file_field :image %>
+    </div>
+    <div class="field">
       <%= f.label :caption %><br>
       <%= f.text_field :caption %>
     </div>
