--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,16 +16,20 @@
     <%= f.text_field :username %>
   </div>
   <div class="field">
+    <%= f.label :password %><br>
+    <%= f.password_field :password %>
+  </div>
+  <div class="field">
+    <%= f.label :profile_picture %>
+    <%= f.file_field :profile_picture %>
+  </div>
+  <div class="field">
     <%= f.label :name %><br>
     <%= f.text_field :name %>
   </div>
   <div class="field">
     <%= f.label :bio %><br>
     <%= f.text_field :bio %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br>
-    <%= f.password_field :password %>
   </div>
   <div class="actions">
     <%= f.submit %>
