--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,31 +1,46 @@
 <p id="notice"><%= notice %></p>
+<div class="row">
+  <class="post">
+    <div class="row" class="post-head">
+      <div class="col-xs-2">
+        <%= image_tag @post.user.profile_picture.url(:thumb), class: 'thumb-img' %>
+      </div>
+      <div class="col-xs-10">
+        <p>
+          <strong>User:</strong>
+          <%= @post.user.username %>
+        </p>
+      </div>
+    </div>
+    <div class="row" >
+      <%= image_tag @post.image.url(:large), class: 'post-img' %>
+    </div>
+    <div class="row" id="post-tasks">
+      <% if logged_in? %>
+        <%= link_to 'Edit', edit_post_path(@post) %> |
+        <%= link_to 'Delete post', "/posts/#{@post.id}", method: :delete, data: { confirm: 'Are you sure?' } %> |
+      <% end %>
+    </div>
+    <div class="post-discussion">
+      <div class="row">
+        <p>
+          <strong><%=@post.user.username%></strong>
+          <%= @post.caption %>
+        </p>
+      </div>
+      <% @post.comments.each do |comment| %>
+        <div class="row">
+          <p><strong><%= comment.user.username %></strong> <%= comment.body %></p>
+        </div>
+      <% end %>
 
-<%= image_tag @post.user.profile_picture.url(:thumb) %>
-
-<p>
-  <strong>User:</strong>
-  <%= @post.user.username %>
-</p>
-
-<%= image_tag @post.image.url(:large) %>
-
-<p>
-  <strong><%=@post.user.username%></strong>
-  <%= @post.caption %>
-</p>
-
-<% if logged_in? %>
-  <%= link_to 'Edit', edit_post_path(@post) %> |
-  <%= link_to 'Delete post', "/posts/#{@post.id}", method: :delete, data: { confirm: 'Are you sure?' } %> |
-<% end %>
-
-<p><strong>Comments:</strong></p>
-<% @post.comments.each do |comment| %>
-  <p><strong><%= comment.user.username %></strong> <%= comment.body %></p>
-<% end %>
-
-<% if logged_in? %>
-  <%= link_to 'Add a comment', "/posts/#{@post.id}/comments/new" %>
-<% end %>
+      <% if logged_in? %>
+        <div class = "row">
+          <%= link_to 'Add a comment', "/posts/#{@post.id}/comments/new" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
 
 <%= link_to 'Back', posts_path %>
