--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,46 +1,49 @@
 <p id="notice"><%= notice %></p>
-<div class="row">
-  <class="post">
-    <div class="row" class="post-head">
-      <div class="col-xs-2">
-        <%= image_tag @post.user.profile_picture.url(:thumb), class: 'thumb-img' %>
-      </div>
-      <div class="col-xs-10">
-        <p>
-          <strong>User:</strong>
-          <%= @post.user.username %>
-        </p>
-      </div>
-    </div>
-    <div class="row" >
-      <%= image_tag @post.image.url(:large), class: 'post-img' %>
-    </div>
-    <div class="row" id="post-tasks">
-      <% if logged_in? %>
-        <%= link_to 'Edit', edit_post_path(@post) %> |
-        <%= link_to 'Delete post', "/posts/#{@post.id}", method: :delete, data: { confirm: 'Are you sure?' } %> |
-      <% end %>
-    </div>
-    <div class="post-discussion">
-      <div class="row">
-        <p>
-          <strong><%=@post.user.username%></strong>
-          <%= @post.caption %>
-        </p>
-      </div>
-      <% @post.comments.each do |comment| %>
-        <div class="row">
-          <p><strong><%= comment.user.username %></strong> <%= comment.body %></p>
-        </div>
-      <% end %>
 
-      <% if logged_in? %>
-        <div class = "row">
-          <%= link_to 'Add a comment', "/posts/#{@post.id}/comments/new" %>
+<div class="container-fluid post-spacing">
+  <div class="row">
+    <div class="col-xs-6 col-xs-push-3 post">
+      <div class="post">
+        <div class="row post-head">
+          <div class="col-xs-1 thumb-img">
+            <%= image_tag @post.user.profile_picture.url(:thumb), class: 'img-responsive img-circle' %>
+          </div>
+          <div class="col-xs-10 username">
+            <p>
+              <%= link_to "{@post.user.username}", @post.user %>
+            </p>
+          </div>
         </div>
-      <% end %>
+        <div class="row post-img">
+          <%= image_tag @post.image.url(:large), class: 'img-responsive post-img' %>
+        </div>
+        <div class="row" id="post-tasks">
+          <% if logged_in? %>
+            <%= link_to 'Edit', edit_post_path(@post) %> |
+            <%= link_to 'Delete post', "/posts/#{@post.id}", method: :delete, data: { confirm: 'Are you sure?' } %> |
+          <% end %>
+        </div>
+        <div class="post-discussion">
+          <div class="row">
+            <p>
+              <strong><%= link_to "#{@post.user.username}", @post.user%></strong>
+              <%= @post.caption %>
+            </p>
+          </div>
+          <% @post.comments.each do |comment| %>
+            <div class="row">
+              <p><strong><%= comment.user.username %></strong>  <%= comment.body %></p>
+            </div>
+          <% end %>
+
+          <% if logged_in? %>
+            <div class = "row">
+              <%= link_to 'Add a comment', "/posts/#{@post.id}/comments/new" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
     </div>
-  </div>
 </div>
 
 <%= link_to 'Back', posts_path %>
