--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Post</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', posts_path %>
+<div class="row">
+  <div class="col-xs-4 col-xs-push-4 form">
+    <h1>Create New Post</h1>
+    <%= render 'form' %>
+    <p>
+      <%= link_to 'Back', posts_path %>
+    </p>
+  </div>
+</div>
