--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New User</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', users_path %>
+<div class="row">
+  <div class="col-xs-4 col-xs-push-4 form">
+    <h1>Welcome</h1>
+    <%= render 'form' %>
+    <p><%= link_to 'Nevermind', users_path %></p>
+  </div>
+</div>
