--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,30 +1,32 @@
-<% if logged_in? %>
-  <%= form_for(@post) do |f| %>
-    <% if @post.errors.any? %>
-      <div id="error_explanation">
-        <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
+<div class="row">
+  <div class="col-xs-12">
+    <% if logged_in? %>
+      <%= bootstrap_form_for(@post) do |f| %>
+        <% if @post.errors.any? %>
+          <div id="error_explanation">
+            <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
 
-        <ul>
-        <% @post.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
+            <ul>
+            <% @post.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+            </ul>
+          </div>
         <% end %>
-        </ul>
-      </div>
-    <% end %>
-    
-    <div class="field">
-      <%= f.label :image %>
-      <%= f.file_field :image %>
-    </div>
-    <div class="field">
-      <%= f.label :caption %><br>
-      <%= f.text_field :caption %>
-    </div>
-    <div class="actions">
-      <%= f.submit %>
-    </div>
-  <% end %>
+        
+        <div class="field">
+          <%= f.file_field :image %>
+        </div>
+        <div class="field">
+          <%= f.text_field :caption %>
+        </div>
+        <div class="actions">
+          <%= f.submit %>
+        </div>
+      <% end %>
 
-<% else %>
-  <p>You must be signed in to write a post.</p>
-<% end %>
+    <% else %>
+      <p>You must be signed in to write a post.</p>
+    <% end %>
+  </div>
+</div>
