--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,29 +10,32 @@
           </div>
           <div class="col-xs-10 username">
             <p>
-              <%= link_to "{@post.user.username}", @post.user %>
+              <%= link_to "#{@post.user.username}", @post.user %>
             </p>
           </div>
         </div>
         <div class="row post-img">
           <%= image_tag @post.image.url(:large), class: 'img-responsive post-img' %>
         </div>
-        <div class="row" id="post-tasks">
+        <div class="row post-tasks">
           <% if logged_in? %>
             <%= link_to 'Edit', edit_post_path(@post) %> |
-            <%= link_to 'Delete post', "/posts/#{@post.id}", method: :delete, data: { confirm: 'Are you sure?' } %> |
+            <%= link_to 'Delete', "/posts/#{@post.id}", method: :delete, data: { confirm: 'Are you sure?' } %>
           <% end %>
         </div>
         <div class="post-discussion">
           <div class="row">
             <p>
               <strong><%= link_to "#{@post.user.username}", @post.user%></strong>
-              <%= @post.caption %>
+              &nbsp;<%= @post.caption %>
             </p>
           </div>
           <% @post.comments.each do |comment| %>
             <div class="row">
-              <p><strong><%= comment.user.username %></strong>  <%= comment.body %></p>
+              <p>
+                <strong><%= link_to "#{comment.user.username}", comment.user%></strong>
+                &nbsp;<%= comment.body %>
+              </p>
             </div>
           <% end %>
 
@@ -46,4 +49,8 @@
     </div>
 </div>
 
-<%= link_to 'Back', posts_path %>
+<div class="back">
+  <p>
+    <%= link_to 'Back', posts_path %>
+  </p>
+</div>
