Added styling to forms and added grid to user show page

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -41,14 +41,14 @@ header
   height: 72px
   border: solid #989898
   border-width: 0 0 1px 0
+  margin-bottom: 2.5%
 
 footer
   background-color: #FFFFFF
   height: 72px
-
-footer
   border: solid #989898
   border-width: 1px 0 0 0
+  margin-top: 5%
 
 footer p
   font-size: 24px
@@ -61,22 +61,18 @@ footer p
   font-size: 18px
   text-align: center
 
-/*
- * Formatting for header and footer
- */
-
-header
-  margin-bottom: 2.5%
-
-footer
-  margin-top: 5%
+.col-xs-12.space
+  height: 72px
 
 /*
  * Formatting for index page
  */
 
+.col-xs-8.col-xs-push-2.welcome
+  padding: 36px
+
 .col-xs-8.col-xs-push-2.welcome p
-  font-size: 48
+  font-size: 48px
   text-align: center
   font-weight: bold
 
@@ -99,6 +95,8 @@ div.row.post-head
 .post
   background-color: white
   border-radius: 6px
+  border: solid #E0E0E0
+  border-width: 1px
 
 .row.post-tasks
   padding: 12px
@@ -131,9 +129,10 @@ div.row.post-head
   font-size: 24px
   line-height: 150%
 
-.row .about
-  padding-top: 5%
+.row.about
   padding-bottom: 5%
+  margin-top: 2.5%
+  vertical-align: center
 
 
 .col-xs-4.col-xs-push-4.form h1
@@ -141,6 +140,30 @@ div.row.post-head
   font-weight: bold
   font-size: 36px
 
+.col-xs-4.col-xs-push-4.form
+  padding-top: 12px
+
 .col-xs-4.col-xs-push-4.form p
+  text-align: center
+  font-size: 24px
+
+.log-in
+  width: 100%
+
+.log-in-tag
+  padding-top: 12px
+  padding-bottom: 6px
+
+.col-xs-12.form-btn
+  padding: 18px
+
+.col-xs-12.no-posts
+  padding: 12px
+
+.col-xs-12.no-posts
+  text-align: center
+  font-size: 36px
+
+.new-post p
   text-align: center
   font-size: 24px
