--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,20 @@
-<h1>New Comment</h1>
+<div class="row">
+  <div class="col-xs-4 col-xs-push-4 form">
+    <h1>New Comment</h1>
 
-<%= render 'form' %>
+    <%= render 'form' %>
 
-<%= link_to 'Back', "/posts/#{params[:post_id]}" %>
+    <p>
+      <%= link_to 'Back', "/posts/#{params[:post_id]}" %>
+    </p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12 space">
+  </div>
+  <div class="col-xs-12 space">
+  </div>
+  <div class="col-xs-12 space">
+  </div>
+</div>
