--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,11 @@
-<p id="notice"><%= notice %></p>
-
 <div class="container-fluid post-spacing">
+
+  <div class="row">
+    <div class="col-xs-6 col-xs-push-3">
+      <p id="notice"><%= notice %></p>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-xs-6 col-xs-push-3 post">
       <div class="post">
