--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,7 +3,16 @@
     <h1>Create New Post</h1>
     <%= render 'form' %>
     <p>
-      <%= link_to 'Back', posts_path %>
+      <%= link_to 'Back', current_user %>
     </p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12 space">
+  </div>
+  <div class="col-xs-12 space">
+  </div>
+  <div class="col-xs-12 space">
   </div>
 </div>
