--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,33 +1,37 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Users</h1>
+<div class="row">
+  <div class="col-xs-4 col-xs-push-4">
+    <h1>Listing Users</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th>Name</th>
-      <th>Bio</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <table>
+      <thead>
+        <tr>
+          <th>Username</th>
+          <th>Name</th>
+          <th>Bio</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.username %></td>
-        <td><%= user.name %></td>
-        <td><%= user.bio %></td>
-        <td><%= link_to 'Show', user %></td>
-        <% if logged_in? && current_user == user %>
-          <td><%= link_to 'Edit', edit_user_path(user) %></td>
-          <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <td><%= user.username %></td>
+            <td><%= user.name %></td>
+            <td><%= user.bio %></td>
+            <td><%= link_to 'Show', user %></td>
+            <% if logged_in? && current_user == user %>
+              <td><%= link_to 'Edit', edit_user_path(user) %></td>
+              <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-<br>
+    <br>
 
-<%= link_to 'New User', new_user_path %>
+    <%= link_to 'New User', new_user_path %>
+  </div>
+</div>
