--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,16 +2,16 @@
 
 <div class="container-fluid">
   <div class="row about">
-    <div class="col-xs-1 col-xs-push-3">
+    <div class="col-xs-2 col-xs-push-2">
       <%= image_tag @user.profile_picture.url(:medium), class: 'img-responsive img-circle'%>
     </div>
-    <div class="col-xs-6 col-xs-push-3">
+    <div class="col-xs-6 col-xs-push-2">
       <div class="row">
         <div class="col-xs-12 about">
           <p>
-            <strong>
+            <span style="font-size:36px">
               <%= @user.username %><br>
-            </strong>
+            </span>
             <strong>Posts:</strong>
             <%= @user.posts.count %>
             <strong>&nbsp;&nbsp;&nbsp;&nbsp;Followers:</strong>
@@ -21,42 +21,44 @@
             <strong><%= @user.name %></strong>
             <%= @user.bio %>
           </p>
-        </div>
-      </div>
 
-      <% if logged_in? %>
-        <div class="row">
-          <% if @user == current_user %>
-            <%= link_to 'New Post', '/posts/new' %> |
-            <%= link_to 'Edit Info', edit_user_path(@user) %> |
-            <%= link_to 'Destroy', @user, method: :delete, data: { confirm: 'Are you sure?' } %>
-          <% elsif current_user_is_following(current_user.id, @user.id) %>
-            <%= link_to 'Following', "/users/#{@user.id}/unfollow_user", method: :post %>
-          <% else %>
-            <%= link_to 'Follow', "/users/#{@user.id}/follow_user", method: :post %>
+          <% if logged_in? %>
+            <div class="row">
+              <% if @user == current_user %>
+                <%= link_to 'New Post', '/posts/new' %> |
+                <%= link_to 'Edit Info', edit_user_path(@user) %> |
+                <%= link_to 'Delete Account', @user, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <% elsif current_user_is_following(current_user.id, @user.id) %>
+                <%= link_to 'Following', "/users/#{@user.id}/unfollow_user", method: :post %>
+              <% else %>
+                <%= link_to 'Follow', "/users/#{@user.id}/follow_user", method: :post %>
+              <% end %>
+            </div>
           <% end %>
         </div>
-      <% end %>
+      </div>
     </div>
   </div>
 </div>
 
 <div class="row">
-  <div class="col-xs-6 col-xs-push-3 post">
-    <table>
-      <tbody>
-        <% sorted_posts = @user.posts.reverse %>
-        <% sorted_posts.each do |post| %>
-          <tr>
-            <td><%= post.caption %></td>
-            <td><%= link_to 'Show', "/posts/#{post.id}" %></td>
-            <% if logged_in? && @user == current_user %>
-              <td><%= link_to 'Edit', "/posts/#{post.id}", method: :edit %></td>
-              <td><%= link_to 'Destroy', "/posts/#{post.id}", method: :delete, data: { confirm: 'Are you sure?' } %></td>
-            <% end %>
-          </tr>
+  <div class="col-xs-8 col-xs-push-2">
+    <div class="row">
+        <% if @user.posts.count == 0 %>
+          <div class="col-xs-12 no-posts">
+            <p>User has no posts yet</p>
+          </div>
+        <% else %>
+          <% sorted_posts = @user.posts.reverse %>
+          <% sorted_posts.each do |post| %>
+            <div class="col-xs-4">
+              <a href="post">
+                <%= image_tag post.image.url(:medium), class: 'img-responsive post-img' %>
+              </a>
+            </div>
+          <% end %>
         <% end %>
       </tbody>
-    </table>
+    </div>
   </div>
 </div>
